--- a/source/book.yaml
+++ b/source/book.yaml
@@ -1,19 +1,18 @@
 ---
-title: "Annabel Scheme and the Adventure of the New Golden Gate"
+title: "River Widows, by Juan Carlos Asensio"
 title_html: <div class="title">
-            <h1><span>Annabel&nbsp;Scheme</span>
-                <span>and&nbsp;the</span>
-                <span>Adventure of&nbsp;the New&nbsp;Golden&nbsp;Gate</span>
+            <h1><span>River Widows:</span>
+                <span>Las Doñas Que Lloran Ríos</span>
             </h1>
-            <h2>Robin Sloan</h2>
+            <h2>Juan Carlos Asensio</h2>
             </div>
-description: This is a story originally published as a newspaper serial in the Mercury News and the East Bay Times.
-author: Robin Sloan
-slug: annabel-scheme-new-golden-gate
-pub_date: 2020-07-01
+description: This is a story by Juan Carlos Asensio which first appeared, partially, on TRIBUS ACTUALES.
+author: Juan Carlos Asensio
+slug: river-widows
+pub_date: 2019-08-01
 home_url: "https://www.robinsloan.com/book/annabel-scheme-new-golden-gate"
-cover_image: "img/scheme-cover-web.png"
-markdown_source: annabel-scheme-new-golden-gate.md
-spot_color: "rgb( 192, 54, 44)"
+cover_image: "/img/palacio-de-los-capitanes-antigua-guatemala.jpg"
+markdown_source: river-widows.md
+spot_color: "rgb(192, 54, 44)"
 use_twitter_card: true
-twitter_username: "@robinsloan"
+twitter_username: "@toysoldier182"
